# src/Routers/userRouter.ts
@@ -1,6 +1,7 @@
 import express from 'express';
 import { registerController } from '../Controller/User/RegisterController';
 import { LoginUserController} from '../Controller/User/LoginUserController';
+import { getUser } from '../Controller/User/Getuser';
 
 const router = express.Router();
 
@@ -14,6 +15,7 @@ router.get("/", (req, res) => {
 });
 router.post("/register",registerController);
 router.post("/login",LoginUserController);
+router.get("/getuser", getUser);
 
 
 
